...
                        android:layout_marginBottom="32dp"
                        android:text="@string/btn_login"
                        app:cornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_Password" />

                    <EditText
                        android:id="@+id/txt_Password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
...
                        android:layout_marginEnd="24dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_Email" />

                    <EditText
                        android:id="@+id/txt_Email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
...
