...
    <string name="weight_hint">59</string>
    <string name="weight_label">Weight</string>
    <string name="username_label">Username</string>
    <string name="username_hint">JohnDoe123, JohnDoe, John_Doe</string>
    <string name="age_hint">22</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="workout_beginner">Beginner</string>
    <string name="workout_intermediate">Intermediate</string>
    <string name="workout_hard">Hard</string>
    <string name="workout_bodyb">Body Builder</string>
    <string name="settings_editprofile">Edit Profile</string>
    <string name="settings_logout">Log Out</string>
    <string name="workout_start">Start Workout</string>
...
